[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.14.0"
parse-display = "0.10.0"
parse-display-derive = "0.10.0"
pathfinding = "4.8.0"
regex = "1.11.1"
lazy_static = "1.5.0"
num = "0.4.3"
memoize = "0.5.1"
rayon = "1.11.0"
geo = "0.32.0"
geo-types = "0.7.18"